--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,15 @@
 :root {
-  --main-color: rgb(237,168,10);
+  --main-color: #ee9617;
+  --rose : #fe5858 ; 
   --complementary : rgb(65,23,162); 
   --analogous : rgb(237,112,10) ;
   --monochromatic : rgb(212,164,52); 
   --triadic : rgb(10,237,169); 
   --secondary :  rgb(10,121,147) ; 
+  --width: 100%;
+  --height: 100%;
+  --border-width: 200px;
+  --border-height: 200px;
 }
 
 
@@ -88,6 +93,7 @@ h2, h3{
     position: absolute;
     display: block;
     border : 5px solid #fff  ;  
+
     box-shadow : 0 5px 0  #ccc ,
                 inset 0 5px 0 #ccc ; 
     box-sizing: border-box;
@@ -346,14 +352,7 @@ h2, h3{
 /*-----------------------------------icons ----------------------------------------------------------*/
 
 
-.middle{
-    padding-top: 0%;
-    overflow: hidden;
-    display: flex;
-    justify-content: center;
 
-  text-align: center;
-}
 .btn{
   width: 60px;
   height: 60px; 
@@ -370,7 +369,7 @@ h2, h3{
 .btn i{
   line-height: 50px;
   font-size: 26px;
-  color : var(--complementary); 
+  color : var(--main-color) ; 
   transition: 0.2s linear;
 }
 .btn:hover i{
@@ -435,9 +434,8 @@ h2, h3{
   height: 110%;
   width: 85%;
   clip-path: polygon(50% 0%, 100% 25%, 100% 75%, 50% 100%, 0% 75%, 0% 25%);
-  background: #fe5858;
   background-color :#ee9617;
-  background-image : linear-gradient(315deg, #ee9617 0%, #fe5858 74%);
+  background-image : linear-gradient(315deg, var(--main-color) 0%, var(--rose) 74%);
     margin : 0 5px;
   transform: translate(0px , 0px)rotate(30deg);
   }
@@ -454,7 +452,7 @@ h2, h3{
   height: 110%;
   width: 85%;
   clip-path: polygon(50% 0%, 100% 25%, 100% 75%, 50% 100%, 0% 75%, 0% 25%);
-  background:#fe5858;
+  background: var(--rose);
   opacity: 0.08;
 
   }
@@ -463,7 +461,7 @@ h2, h3{
   .picture:hover{
     animation: rotat2 1s ease;
   }
-  .picture:hover::after{
+  .picture:hover::after {
       opacity: 0;
   }
 
@@ -522,7 +520,8 @@ h2, h3{
   margin-top: 10% !important;
   outline: 90px solid transparent !important;
   animation: float 3s infinite ; 
-  background:  #fe5858 ; 
+  background: var(--main-color) ; 
+  border-radius: 6px;
   box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1); 
 }
 
@@ -532,7 +531,7 @@ h2, h3{
     width: 35px;
     height: 35px;
     border-radius: 15px;
-    background:#fe5858; 
+    background: var(--main-color); 
     top: 50%;
     margin-top: -16px;
     z-index: -2; }
@@ -556,8 +555,6 @@ h2, h3{
     z-index: -1; }
 
 
-.button--2:hover {
-    background-color: transparent; }
 
 
 .button--2:hover:before, .button--2:hover span {
@@ -565,8 +562,151 @@ h2, h3{
 
 
       /*------------------------------------section about ---------------------------------------*/
+/*
+#button-header {
+
+  
+  background-color: white;
+  color : var(--rose) ;
+  border : none ;
+  border-radius: 5px;
+  padding : 20px 50px ; 
+  font-size: 17px;
+  letter-spacing: 2px;
+  font-family: "Lato B";
+  text-decoration: none;
+  position: absolute;
+  overflow: hidden;
+  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
 
 
+}
+
+#button-header::before {
+  content: '';
+  position: absolute;
+  top : 2px ; 
+  left : 2px ; 
+  bottom: 2px;
+  width: 50%;
+  background: rgba(255,255,255,0.05);
+}
+
+#button-header span:nth-child(1) {
+  position: absolute;
+  top : 0 ; 
+  left : 0 ; 
+  width : 100% ; 
+  height: 3px ;
+  background: linear-gradient(to right , white,var(--rose));
+  animation : animate1 2s linear infinite ; 
+
+}
+
+@keyframes animate1 {
+  0% {
+    transform : translateX(-100%)
+  }
+  100% {
+    transform : translateX(100%)
+  }
+}
+
+#button-header span:nth-child(2) {
+  position: absolute;
+  top : 0 ; 
+  right: 0; 
+  width : 3px  ; 
+  height: 100%;
+  background: linear-gradient(to bottom , white,var(--rose));
+  animation : animate2 2s linear infinite ; 
+  animation-delay: 1s;
+
+}
+
+@keyframes animate2{
+  0% {
+    transform : translateY(-100%)
+  }
+  100% {
+    transform : translateY(100%)
+  }
+}
+
+
+#button-header span:nth-child(3) {
+  position: absolute;
+  bottom : 0 ; 
+  left : 0 ; 
+  width : 100% ; 
+  height: 3px ;
+  background: linear-gradient(to left,white,var(--rose));
+  animation : animate3 2s linear infinite ; 
+
+}
+
+
+@keyframes animate3{
+  0% {
+    transform : translateX(100%)
+  }
+  100% {
+    transform : translateX(-100%)
+  }
+}
+
+#button-header span:nth-child(4) {
+  position: absolute;
+  top : 0 ; 
+  left: 0; 
+  width : 3px  ; 
+  height: 100%;
+  background: linear-gradient(to top ,white,var(--rose));
+  animation : animate4 2s linear infinite ; 
+  animation-delay: 1s;
+
+}
+
+@keyframes animate4{
+  0% {
+    transform : translateY(100%)
+  }
+  100% {
+    transform : translateY(-100%)
+  }
+}*/
+
+
+.btnHead {
+  width: 180px;
+  height: 60px;
+  font-family: 'Lato R' ; 
+  font-size: 15px;
+  font-weight: 500;
+  color: white;
+  font-weight: bold;
+  font-size: 15px;
+  letter-spacing: 2px;
+  background-color: transparent;
+  border : 2px solid white ; 
+  border-radius: 5px;
+  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+  transition: all 0.3s ease 0s;
+  cursor: pointer;
+  outline: none;
+
+}
+
+.btnHead:hover{
+  background-color: #2EE59D;
+  box-shadow: 0px 15px 20px rgba(46, 229, 157, 0.4);
+  color: #fff;
+  border : none ; 
+  transform: translateY(-7px);
+}
+.btnHead:focus{
+  outline: none;
+}
 .Title {
   font-size: 40px;
   margin-top: 0;
@@ -704,6 +844,7 @@ header h3 {
 .fa-angle-down {
 
 animation: down 1s linear infinite;
+margin-left: 80px;
 
 
 
@@ -714,10 +855,10 @@ animation: down 1s linear infinite;
 }
 
 .down {
-  margin-top: 10%;
+  margin-top: 30px;
 }
 .down a {
-padding-top: 10%;
+padding-top: 15%;
 text-decoration: none;
 color : white ; 
 padding-bottom: 10%;
@@ -772,6 +913,7 @@ overflow: hidden;
   background-color: var(--main-color);
   bottom: 5%;
   right: 5%;
+
   box-shadow: 2px 2px 5px var(--analogous) ;
 }
 
@@ -791,7 +933,6 @@ overflow: hidden;
 }
 .education {
   margin-top : 100px ; 
-  margin-bottom: 100px ;
 }
 
 .eduSection h2 {
@@ -824,8 +965,9 @@ overflow: hidden;
 
 
 .skkils {
-  margin-top : 50px ; 
+  margin-top : 0px ; 
   background: #f5f5f5;
+  padding-top: 100px;
   
 }
 
@@ -834,12 +976,12 @@ overflow: hidden;
 }
 
 .skkils h3 {
-  font-size: 15px ;
+  font-size: 17px ;
   margin-left: 20px ;
 }
 
 .progress {
-  height: 13px ;
+  height: 12px ;
 }
 
 .progress-bar {
@@ -868,7 +1010,7 @@ overflow: hidden;
   background-color: #f5f5f5;
   margin: 0;
   position: relative;
-  top : -20px ; 
+  top : -2px ; 
 }
 
 .shape_sec {
@@ -880,12 +1022,23 @@ overflow: hidden;
 
 .carr-image {
   object-fit:cover ; 
+  background-image: url("../pictures/P7131609.JPG");
+  background-size: cover;
+  object-fit : cover; 
   background-repeat: no-repeat; 
   margin: none ;
   padding: 0px;
   color : white ; 
 }
 
+.carousel-item h3 {
+  font-family: 'Lota R';
+  font-size: 20px;
+}
+.carousel-item p {
+  font-family: 'Lota R';
+  font-size: 18px;
+}
 .carr-image h1 {
   color : white ; 
 }
@@ -906,34 +1059,291 @@ overflow: hidden;
   text-transform: uppercase;
 }
 
+footer h1 {color : white ; }
+
 .carrousel-title {
   position: relative;
 }
 footer {
-  background-color: #f5f5f5; 
+  background-image :linear-gradient(315deg,var(--main-color) 0%, #fe5858  74%);
+  color : white ; 
 }
 
-
-.experience img {
-  width: 100%;
-  height: 200px ;
+.events img {
+  width : 100% ;
+  height: 200px;
   object-fit: cover;
+  border-radius: 10px ;
 
+}
+.experience img {
+  width: 150px;
+  height: 150px ; 
+  
 }
 
 .experience {
+  background: #f5f5f5;
   
 }
 .experience-col {
+  background:white;
+}
+
+.experience i {
+  font-size: 16px ;
+  color : var(--analogous); 
+}
+.projects {
   background: #f5f5f5;
+}
+.experience h3 , .projects h3  {
+color : #313131 ; 
+font-family: 'Lato B';
+text-transform: uppercase;
+font-size: 18px;
+}
+.experience p {
+  font-size: 16px;
+}
+
+.myBtn {
+  background-color: transparent;
+  color : var(--complementary) ;
+  border : none ; 
+  margin-left: 15px ; 
+  font-family: 'Lato B';
+  border-top: 4px solid var(--analogous);
+  padding-top: 10px ;
+  font-size: 13px ;
+
+}
+
+.myBtn:focus {
+  outline: none;
+}
+.myBtn i {
+  margin-right: 10px;
+
+}
+.myBtn:hover i  {
+  transform: translateX(20px);
+  margin-right: 30px;
+
+}
+
+.more {display: none;}
+
+.project-header {
+  background-color: #ee9617;
+background-image :linear-gradient(315deg,var(--main-color) 0%, #fe5858 74%);
+
+  position: absolute;
+  height: 300px;
+  width: 100%;
+}
+
+.projects  h1 {
+  color : white ; 
+  position: absolute;
+}
+
+.projects h4 {
+  font-size: 15px ;
+  font-family: 'Lato R';
+  margin-top: 5px;
+}
+.bloc {
+  position: relative;
+  top: 60px ;
+  background-color: white ; 
+  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  
+}
+
+.pic img {
+  width: 90% ;
+  height: 220px ; 
+  object-fit: cover;
+ border-radius: 5px;
+ 
+
+}
+.pic {
+  position: relative;
+}
+
+.pic::after {
+  content: "";
+  position: absolute;
+  background:#fe5858;
+  opacity: 0.1;
+  width: 80%;
+  height: 220px ; 
+
+}
+
+.pic:hover::after {
+  opacity: 0;
+}
+
+.link  a{
+ color : var(--rose) ;  
+ font-size: 14px;
+ font-family: 'Lato B';
+ text-decoration: none;
+}
+
+.link i {
+  color : turquoise ; 
+  margin-right: 10px;
+  font-size: 20px;
+}
+
+.item-scholarship {
+  width: 100%;
+  height: 100%;
+  clip-path: polygon(0% 0%, 100% 0, 100% 85%, 50% 100%, 0 85%) ; 
+  background-color: #f5f5f5; 
+}
+
+.logo-school {
+  display : flex ;
+  justify-content: center;
+  align-items: center ;
+  width :  110px ; 
+  height: 110px ;
+  border-radius: 50%;
+  background-color: white ;
+
+}
+
+.logo-school::before {
+  content:'' ; 
+  position: absolute;
+  width :  130px ; 
+  height: 130px ;
+  border-radius: 50%;
+  background-color:transparent;
+  border-left : 1px dashed var(--rose) ; 
+  border-top : 1px dashed var(--rose) ; 
+  border-bottom : 1px dashed var(--rose) ; 
+  transform: rotate(-25deg);
+}
+.logo-school::after {
+  content:'' ; 
+  position: absolute;
+  width :  146px ; 
+  height: 146px ;
+  border-radius: 50%;
+  background-color:transparent;
+  border-left : 2px solid var(--main-color) ; 
+  border-top : 2px solid var(--main-color); 
+  border-bottom : 2px solid var(--main-color); 
+  transform: rotate(-25deg);
 }
 
 
+.logo-school img {
+  width :  50% ; 
+  height: 50% ; 
+  border-radius: 50%;
+
+}
+ .item-scholarship h3{
+   font-family: 'Lato B';
+  font-size: 19px ;
+
+ }
+
+ .item-scholarship h5{
+  font-size: 14px ;
+  color : turquoise; 
+ } 
+ .item-scholarship p {
+   font-size: 16px ;
+   margin-bottom: 60px ;
+ }
+ .name-school {
+   background: linear-gradient(315deg,var(--main-color) 0%, #fe5858 74%);
+   opacity: 0.8;
+   padding : 16px 14px; 
+   top : 75px; 
+   position: absolute;
+   right: 30%;
+   clip-path: circle(50% at 50% 50%);
+   color : white ; 
+   font-family: 'Lato B';
+
+ }
 
 
+ .gallery2 {
+   transform: translateY(-69px );
+ }
 
 
+.clipped-border img{
+  width:var(--width);
+  height:var(--height);
+  object-fit: cover;
+}
 
+.clipped-border{
+  -webkit-clip-path: polygon(50% 0%, 100% 25%, 100% 75%, 50% 100%, 0% 75%, 0% 25%);
+   clip-path: polygon(50% 0%, 100% 25%, 100% 75%, 50% 100%, 0% 75%, 0% 25%);
+   padding:5px; 
+   background : white  ; 
+   width:var(--border-width);
+   height:var(--border-height);
+   height:290px;
+   width:270px;
+   margin : 5px ; 
+   transition:transform 0.2s;
+   position : relative;
+   cursor:pointer;
+}
+
+.voluntary {
+  background: #f5f5f5;
+}
+
+.clipped-border:before{
+  content:"hello";
+  position:absolute;
+  opacity:0.5;
+  width:350px;
+  height:70px;
+  background:white ;  
+  top:0;
+  left:0;
+  z-index:1;
+  transform:rotate(45deg);
+  transition:transform 0.5s;
+}
+
+.clipped-border:hover:before{
+  transform: translate(-110px,400%) rotate(45deg);
+  transition:transform 0.5s;
+}
+
+#clipped {
+-webkit-clip-path: polygon(50% 0%, 95% 25%, 95% 75%, 50% 100%, 0% 75%, 0% 25%);
+clip-path: polygon(50% 0%, 100% 25%, 100% 75%, 50% 100%, 0% 75%, 0% 25%);
+
+}
+
+.clipped-border:hover{
+  transform:scale(1.2);
+  transition:transform 0.2s;
+  z-index:10;
+}
+
+
+.timeline {
+  border-left: 5px solid var(--rose);
+  height: 300px ;
+}
 
 /*****************media queries *****************************************************************/
 @media (max-width: 900px) {
