--- a/css/style.css
+++ b/css/style.css
@@ -74,6 +74,13 @@ h2, h3{
 }
 
 /*--------------------------------------------------header----------------------------------------*/
+
+.collapse.show {
+ 
+
+
+
+}
 .svg-container {
     position: absolute;
     top: 0;
@@ -905,7 +912,7 @@ font-size: 18px;
 
 .pic img {
   width: 90% ;
-  height: 220px ; 
+  height: 90%; 
   object-fit: cover;
  border-radius: 5px;
  
@@ -920,8 +927,8 @@ font-size: 18px;
   position: absolute;
   background:#fe5858;
   opacity: 0.1;
-  width: 80%;
-  height: 220px ; 
+  width: 75%;
+  height:90% ; 
 
 }
 
@@ -1144,66 +1151,137 @@ clip-path: polygon(50% 0%, 100% 25%, 100% 75%, 50% 100%, 0% 75%, 0% 25%);
 
 
 /*****************media queries *****************************************************************/
-@media (max-width: 1000px) {
 
- 
-  .picture {
-    display: none;
+@media (min-width: 1200px) {
+  .container {
+    max-width: 1150px;
   }
+}
+@media (max-width: 991px) {
+  header h1 {
+    font-size: 50pt !important ;
+    margin-bottom: 0.2em;
+  }
+  .container {
+    max-width: 750px;
+  }
+  .col-btn-head {
+    margin-top: 1em ;
+  }
+
+  .mt-5 {
+    margin-top: 1.5em !important;
+  }
+
+} 
+
+@media (max-width : 1185px ) {
+  .gallery2 {
+    transform: translateY(0px);
+   }
+}
+
+@media (max-width : 990px ) {
+  .gallery2 {
+    transform: translateY(0px);
+   }
 }
 
 
-@media (max-width: 500px) {
 
-  .col-btn-head {
-   width: 100%;
-   margin: 0;
-    display: flex ;
-    justify-content: center;
-  }
-  
-  .col-btn-head button {
-   background-image :linear-gradient(315deg,var(--main-color) 0%, #fe5858  74%); 
-   width: 50%;
-   border: none;
-  }
+@media (max-width: 768px) {
 
-  .projects h1 {
-    margin-top : -10px ; 
+  .gallery2 {
+    transform: translateY(0px);
   }
+ .picture {
+   display: none;
+ }
+  .navbar.navbar-expand-md.navbar-dark {
+    background : linear-gradient(315deg,var(--main-color) 20%, #fe5858  74%) ; 
+    border: none ;
+
+}
+.head {
+  padding : 20px 40px ; 
+}
+
+.about {
+  margin-top: 10% ;
+}
+
+#textCurve {
+  top : -20% ; 
+  width: 200px;
+  height: 200px;
+}
+.ProfilePic img {
+  width: 250px ;
+  height: 250px ;
+}
+.ProfilePic::before {
+  width: 260px;
+  height: 260px ;
+}
+.ProfilePic::after {
+  width: 250px;
+  height: 250px ;
+}
+.carr-title {
+  font-size: 35px ;
+}
+.certif-header {
+  margin-top: 35% ;
+}
+
+ .projects h1 {
+   margin-top : -10px ; 
+ }
 .p-4 {
-  padding : 1rem !important ; 
+ padding : 1rem !important ; 
 }
 .pt-5 {
-  margin-top: 1.5rem !important;
+ margin-top: 1.5rem !important;
 }
 .pb-5 {
-  margin-bottom: 1.5rem !important;
+ margin-bottom: 1.5rem !important;
 }
 .pr-5 {
-  margin-right: 1.5rem !important;
+ margin-right: 1.5rem !important;
 }
 .pl-5 {
-  margin-left: 1.5rem !important;
+ margin-left: 1.5rem !important;
 }
-  .p-5 {
-    padding : 1.5rem !important ; 
-  }
-  .m-5 {
-    margin : 1.5rem !important ; 
-  }
-.gallery2 {
-  transform: translateY(0px);
+ .p-5 {
+   padding : 1.5rem !important ; 
+ }
+ .m-5 {
+   margin : 1.5rem !important ; 
+ }
+
+ .Title {
+   margin-top: 40px ;
+ }
+ svg {
+   display: none;
+ }
+ .svg-container {
+    height: 450px;
+  background-image :linear-gradient(315deg,var(--main-color) 0%, #fe5858  74%); ;
+ }
+ 
+ .picture::before {
+   transform: translate(10px ,0px);
+ }
+ 
+
 }
-  .Title {
-    margin-top: 40px ;
-  }
-  .hire {
-    display : none ; 
-  }
-  
-  .picture::before {
-    transform: translate(10px ,0px);
-  }
-    }
-  
+
+@media (max-width : 400px )  {
+  .svg-container {
+    height: 600px;
+   
+
+ }
+
+}
